webplatform-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2019-09-12T03:34:20Z"
  generation: 1
  labels:
    run: webplatform
  name: webplatform-deployment
  namespace: test
  resourceVersion: "3744134"
  selfLink: /apis/extensions/v1beta1/namespaces/dev/deployments/webplatform-deployment
  uid: 34f214b5-d50e-11e9-9007-42010a8001b4
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: webplatform
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: webplatform
      namespace: default
    spec:
      automountServiceAccountToken: false
      containers:
      - command:
        - python
        - /app/app.py
        env:
        - name: MYSQL_USER
          value: webplaformbbuser
        - name: MYSQL_DATABASE
          value: webplatformdb
        - name: MYSQL_HOST
          value: webplatform-mysql-service
        - name: SERVICE_CERT_FILENAME
          value: /var/run/secrets/kubernetes.io/serviceaccount
        envFrom:
        - secretRef:
            name: webplatform-secret
            optional: false
        image: docker.fuchicorp.com/webplatform-dev:0.5
        imagePullPolicy: Always
        name: webplatform-container
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: webplatform-service-account-token-rj4gr
          readOnly: true
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: nexus-creds
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: webplatform-service-account
      serviceAccountName: webplatform-service-account
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - name: webplatform-service-account-token-rj4gr
        secret:
          defaultMode: 420
          optional: false
          secretName: webplatform-service-account-token-rj4gr
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2019-09-12T03:34:20Z"
    lastUpdateTime: "2019-09-12T03:34:22Z"
    message: ReplicaSet "webplatform-deployment-5cc87c46df" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2019-09-12T03:34:28Z"
    lastUpdateTime: "2019-09-12T03:34:28Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
