webplatform-mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2019-09-12T03:34:16Z"
  generation: 1
  labels:
    run: webplatform-mysql
  name: webplatform-mysql-deployment
  namespace: dev
  resourceVersion: "3744058"
  selfLink: /apis/extensions/v1beta1/namespaces/dev/deployments/webplatform-mysql-deployment
  uid: 32c4af14-d50e-11e9-9007-42010a8001b4
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: webplatform-mysql
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: webplatform-mysql
      namespace: default
    spec:
      automountServiceAccountToken: false
      containers:
      - env:
        - name: MYSQL_USER
          value: webplaformbbuser
        - name: MYSQL_DATABASE
          value: webplatformdb
        envFrom:
        - secretRef:
            name: webplatform-secret
            optional: false
        image: fsadykov/centos_mysql
        imagePullPolicy: Always
        name: webplatform-mysql-container
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: nexus-creds
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2019-09-12T03:34:18Z"
    lastUpdateTime: "2019-09-12T03:34:18Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2019-09-12T03:34:16Z"
    lastUpdateTime: "2019-09-12T03:34:18Z"
    message: ReplicaSet "webplatform-mysql-deployment-756487c8b4" has successfully
      progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
