webplatform-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2019-09-12T03:34:16Z"
  name: webplatform-mysql-service
  namespace: dev
  resourceVersion: "3744022"
  selfLink: /api/v1/namespaces/dev/services/webplatform-mysql-service
  uid: 32b9cb4b-d50e-11e9-9007-42010a8001b4
spec:
  clusterIP: 10.19.248.163
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    run: webplatform-mysql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
