webplatform-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2019-09-12T03:34:16Z"
  name: webplatform-service
  namespace: dev
  resourceVersion: "3744027"
  selfLink: /api/v1/namespaces/dev/services/webplatform-service
  uid: 32bc8b3a-d50e-11e9-9007-42010a8001b4
spec:
  clusterIP: 10.19.253.103
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30997
    port: 7101
    protocol: TCP
    targetPort: 5000
  selector:
    run: webplatform
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
